[package]
name = "Cappuccino"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
tokio = { version = "1.41.1", features = ["full"] }
rand = "0.8.5"
simplelog = "^0.12.2"
log = "0.4.22"
